# purchase-order-automation

./: .gitignore  README.md  pnpm-lock.yaml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py  settings.py
backend/app/services/: catalog.py  gemini.py  line.py  purchase_runner.py
backend/tests/: test_catalog.py  test_line.py  test_main.py  test_purchase_runner.py
frontend/: .claspignore  README.md  package.json  tsconfig.json
frontend/src/: Code.ts
